trunk/include/FreeImageIcs_MetaData.h



/*
Delete all history in a file.
*/
DLL_API int DLL_CALLCONV
FreeImageIcs_IcsDeleteHistory(ICS *ics);


/*
Replace history string stored in an array.
*/
DLL_API int DLL_CALLCONV
FreeImageIcs_ReplaceIcsHistoryValueForKey(ICS *ics, const char *key, const char *value);



/*
Get the first history string value for the corresponding key.
*/
DLL_API int DLL_CALLCONV
FreeImageIcs_GetFirstIcsHistoryValueWithKey(ICS *ics, char *key, char *value);



/*
Is the Iterator valid
*/
DLL_API int DLL_CALLCONV
IsIcsHistoryIteratorValid (ICS* ics, Ics_HistoryIterator* it);